; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sis/extr_if_sis.c_sis_mchash.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sis/extr_if_sis.c_sis_mchash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sis_softc = type { i64, i64 }

@ETHER_ADDR_LEN = common dso_local global i32 0, align 4
@SIS_TYPE_83815 = common dso_local global i64 0, align 8
@SIS_REV_635 = common dso_local global i64 0, align 8
@SIS_REV_900B = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sis_softc*, i32*)* @sis_mchash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sis_mchash(%struct.sis_softc* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sis_softc*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.sis_softc* %0, %struct.sis_softc** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = load i32, i32* @ETHER_ADDR_LEN, align 4
  %9 = call i32 @ether_crc32_be(i32* %7, i32 %8)
  store i32 %9, i32* %6, align 4
  %10 = load %struct.sis_softc*, %struct.sis_softc** %4, align 8
  %11 = getelementptr inbounds %struct.sis_softc, %struct.sis_softc* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @SIS_TYPE_83815, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %18

15:                                               ; preds = %2
  %16 = load i32, i32* %6, align 4
  %17 = ashr i32 %16, 23
  store i32 %17, i32* %3, align 4
  br label %36

18:                                               ; preds = %2
  %19 = load %struct.sis_softc*, %struct.sis_softc** %4, align 8
  %20 = getelementptr inbounds %struct.sis_softc, %struct.sis_softc* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* @SIS_REV_635, align 8
  %23 = icmp sge i64 %21, %22
  br i1 %23, label %30, label %24

24:                                               ; preds = %18
  %25 = load %struct.sis_softc*, %struct.sis_softc** %4, align 8
  %26 = getelementptr inbounds %struct.sis_softc, %struct.sis_softc* %25, i32 0, i32 1
  %27 = load i64, i64* %26, align 8
  %28 = load i64, i64* @SIS_REV_900B, align 8
  %29 = icmp eq i64 %27, %28
  br i1 %29, label %30, label %33

30:                                               ; preds = %24, %18
  %31 = load i32, i32* %6, align 4
  %32 = ashr i32 %31, 24
  store i32 %32, i32* %3, align 4
  br label %36

33:                                               ; preds = %24
  %34 = load i32, i32* %6, align 4
  %35 = ashr i32 %34, 25
  store i32 %35, i32* %3, align 4
  br label %36

36:                                               ; preds = %33, %30, %15
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i32 @ether_crc32_be(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
